Admin dashboard and displaying all products components

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
       type="text/css"
       href="//db.onlinewebfonts.com/c/157c6cc36dd65b1b2adc9e7f3329c761?family=Amazon+Ember"
     />
-    <title>eMart | eCommerce for everyone</title>
+    <title>E-Mart | eCommerce for Everyone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
